--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
     
     <script>
         // Get the current year for the copyright
-        $('#year').text(new Date().getFullYear)
+        $('#year').text(new Date().getFullYear())
     </script>
 
 </body>
